Safari resumes autoplay audio elements after getUserMedia https://bugs.webkit.org/show_bug.cgi?id=197688 <rdar://problem/57674395>

Reviewed by Eric Carlson.

Source/WebCore:

Covered by updated test.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::mediaStreamCaptureStarted):
Previously, we were piggybacking on resuming autoplay, which happens after interuption.
This is incorrect as it tries to play paused elements.
Instead we just try to play a media element if it can autoplay without changing the m_autoplaying value.
* html/HTMLMediaElement.h:
(WebCore::HTMLMediaElement::mediaStreamCaptureStarted): Deleted.

LayoutTests:

* webrtc/video-autoplay-expected.txt:
* webrtc/video-autoplay.html:


Canonical link: https://commits.webkit.org/218632@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253742 268f45cc-cd09-0410-ab3c-d52691b4dbfc